--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
 
   <div class="container">
-    <img src="https://i.imgur.com/0y0y0y0.jpg" alt="https://www.facebook.com/jitsupa.seeha" class="profile-pic">
+    <img src="https://i.imgur.com/0y0y0y0.jpg" alt="https://www.google.com/url?sa=i&url=https%3A%2F%2Faithailand.co.th%2Fcharacters%2Fcrayon-shinchan%2F&psig=AOvVaw0MwlL_1hv4A-zdv_PtA2_3&ust=1750405214181000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLjCrNr9_I0DFQAAAAAdAAAAABAE" class="profile-pic">
     <h1>สวัสดีค่ะ</h1>
     <p>
      ฉันชื่อ นางสาว จิตรสุภา สีหา อายุ 19 ปี ตอนนี้กำลังศึกษาอยู่ที่ที่มหาวิทยาลัยราชภัฏอุดรธานี คณะวิทยาศาสตร์ สาขาเทคโนโลยีสารสนเทศ
