--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
     <img src="https://i.imgur.com/0y0y0y0.jpg" alt="https://www.google.com/url?sa=i&url=https%3A%2F%2Faithailand.co.th%2Fcharacters%2Fcrayon-shinchan%2F&psig=AOvVaw0MwlL_1hv4A-zdv_PtA2_3&ust=1750405214181000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLjCrNr9_I0DFQAAAAAdAAAAABAE" class="profile-pic">
     <h1>สวัสดีค่ะ</h1>
     <p>
-     ฉันชื่อ นางสาว จิตรสุภา สีหา อายุ 19 ปี ตอนนี้กำลังศึกษาอยู่ที่ที่มหาวิทยาลัยราชภัฏอุดรธานี คณะวิทยาศาสตร์ สาขาเทคโนโลยีสารสนเทศ
+     ชื่อ นางสาว จิตรสุภา สีหา
+     อายุ 19
+     วันเกิด 30/12/2548
       <br><br>
-     เป็นคนรักการเรียนรู้ มีความรับผิดชอบ และสามารถทำงานร่วมกับผู้อื่นได้ดี เคยมีประสบการณ์ฝึกงานที่บริษัทซอฟต์แวร์แห่งหนึ่ง และได้พัฒนาโปรเจกต์เว็บไซต์สำหรับระบบจองห้องประชุม
+     งานอดิเรก อ่านนิยาย ดูหนัง นอน
     </p>
