--- a/index.html
+++ b/index.html
@@ -67,5 +67,5 @@
       <br><br>
      งานอดิเรก อ่านนิยาย ดูหนัง นอน
        <br><br>
-      https://github.com/thehorseisgreen
+      <a href = "https://github.com/thehorseisgreen">GitHub</a>
     </p>
